# ReproAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  debug.txt  fix.py  generate_nb.py  inference.py  main.py  obs_debug.py  openenv.yaml  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  test_demo.py  validate.py  validation_output.txt
.github/workflows/: deploy_hf_env.yml
agents/: __init__.py  debugger.py  paper_parser.py  reasoning_agent.py  repo_analyzer.py
baseline/: __init__.py  run_baseline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/repo/: Header.tsx  LandingForm.tsx  ProcessingView.tsx  ResultsView.tsx
frontend/src/pages/: Index.tsx
graders/: __init__.py  graders.py
reproagent/: __init__.py  actions.py  environment.py  models.py  papers.py  reward.py  state.py
scratch/: gen_sb3_notebook.py
scripts/: prepare_hf_deployment.sh
server/: api.py  app.py  llm_handler.py  pdf_processor.py  ppt_generator.py
training/: ReproAgent_Training_SB3.ipynb  train_reproagent.ipynb  train_reproagent.py
utils/: __init__.py  github_utils.py  pdf_reader.py
