[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reproagent"
version = "1.0.0"
description = "AI agent for automatically reproducing machine learning research papers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ReproAgent Team", email = "team@reproagent.ai"}
]
keywords = [
    "machine-learning",
    "research",
    "reproduction",
    "ai-agent",
    "reinforcement-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "GitPython>=3.1.40",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
llm = [
    "groq>=0.4.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.19.0",
]
ml = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "reproagent[llm,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/reproagent/reproagent"
Documentation = "https://github.com/reproagent/reproagent#readme"
Repository = "https://github.com/reproagent/reproagent"
Issues = "https://github.com/reproagent/reproagent/issues"

[project.scripts]
reproagent = "inference:main"
reproagent-validate = "validate:main"

[tool.setuptools]
packages = ["reproagent", "agents", "graders", "utils", "server", "baseline"]

[tool.setuptools.package-data]
reproagent = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
